feat(java-review): 21 base + Java 25 companion